# TakoPack

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: batch_package.rs  build_order.rs  buildreqs_compact.rs  cli.rs  config.rs  crate_database.rs  crates.rs  deb_dependencies.rs  errors.rs  feature_manifest.rs  lib.rs  local_package.rs  lockfile_parser.rs  package.rs  python_package.rs  range_audit.rs  recursive_package.rs  regen_provider.rs  registry_sync.rs  repo_check.rs  repo_migrate.rs  resolve_check.rs  spec_from_toml.rs  track_command.rs  util.rs
src/cargo_packaging/: buildreqs.rs  crates.rs  local.rs  mod.rs  package.rs  range_audit.rs  recursive.rs  registry_sync.rs  resolve_check.rs  spec_from_toml.rs
src/cli/: commands.rs  mod.rs  options.rs
src/python/: mod.rs  package.rs
src/rpm/: control.rs  metadata.rs  mod.rs  spec.rs
src/takopack/: control.rs  dependency.rs  mod.rs  spec.rs
