[package]
name = "takopack"
version = "0.0.1"
authors = [
 "misaka00251 <liuxin@iscas.ac.cn>",
 "yyjeqhc <jialin.oerv@isrc.iscas.ac.cn",
]
license = "MIT/Apache-2.0"
repository = "https://github.com/TakoPack/TakoPack"
description = "A modified fork of debcargo, used to generate spec files."
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0"
cargo = "0.91"
cargo-util = "0.2.14"
cargo-util-schemas = "0.10"
clap = { version = "4.5", features = ["cargo", "derive", "wrap_help"] }
clap_mangen = { version = "0.2.29" }
chrono = "0.4.31"
env_logger = "0.11"
filetime = "0.2"
flate2 = "1"
git2 = ">= 0.19, < 0.21"
glob = "0.3"
itertools = "0.13"
log = "0.4"
nu-ansi-term = "0.50"
regex = "1.0"
semver = "1"
serde = "1"
serde_derive = "1"
tar = "0.4"
textwrap = "0.16"
tempfile = "3"
toml = "0.8"
walkdir = "2"
